# Backend/src/interfaces/http/validators/auth.validators.ts
@@ -30,7 +30,7 @@ export const registerSchema = z.object({
 });
 
 export const loginSchema = z.object({
-    refreshToken: z.string().min(1, "Phone number is required."),
+    phoneNumber: z.string().min(1, "Phone number is required."),
     password: z.string().min(1, "Password is required."),
 });
 
